src/Skia/Bindings/Gr_context.hs


@
gr_backendrendertarget_t *gr_backendrendertarget_new_gl(int width, int height, int samples, int stencils, const gr_gl_framebufferinfo_t *glInfo)
@
-}
foreign import ccall "gr_backendrendertarget_new_gl" gr_backendrendertarget_new_gl ::
  CInt -- ^ C argument @"int width"@
  -> CInt -- ^ C argument @"int height"@
  -> CInt -- ^ C argument @"int samples"@
  -> CInt -- ^ C argument @"int stencils"@
  -> Ptr (Gr_gl_framebufferinfo) -- ^ C argument @"const gr_gl_framebufferinfo_t * glInfo"@
  -> IO (Ptr (Gr_backendrendertarget)) -- ^ C return type: @"gr_backendrendertarget_t *"@

-- | Function pointer to 'gr_backendrendertarget_new_gl'
foreign import ccall "&gr_backendrendertarget_new_gl" p'gr_backendrendertarget_new_gl ::
  FunPtr (CInt -> CInt -> CInt -> CInt -> Ptr (Gr_gl_framebufferinfo) -> IO (Ptr (Gr_backendrendertarget)))

{- | C function signature:

@
gr_backendrendertarget_t *gr_backendrendertarget_new_vulkan(int width, int height, const gr_vk_imageinfo_t *vkImageInfo)
@
-}
foreign import ccall "gr_backendrendertarget_new_vulkan" gr_backendrendertarget_new_vulkan ::
  CInt -- ^ C argument @"int width"@
  -> CInt -- ^ C argument @"int height"@
  -> Ptr (Gr_vk_imageinfo) -- ^ C argument @"const gr_vk_imageinfo_t * vkImageInfo"@
  -> IO (Ptr (Gr_backendrendertarget)) -- ^ C return type: @"gr_backendrendertarget_t *"@

-- | Function pointer to 'gr_backendrendertarget_new_vulkan'
foreign import ccall "&gr_backendrendertarget_new_vulkan" p'gr_backendrendertarget_new_vulkan ::
  FunPtr (CInt -> CInt -> Ptr (Gr_vk_imageinfo) -> IO (Ptr (Gr_backendrendertarget)))

{- | C function signature:

@
gr_backendrendertarget_t *gr_backendrendertarget_new_metal(int width, int height, const gr_mtl_textureinfo_t *mtlInfo)
@
-}
foreign import ccall "gr_backendrendertarget_new_metal" gr_backendrendertarget_new_metal ::
  CInt -- ^ C argument @"int width"@
  -> CInt -- ^ C argument @"int height"@
  -> Ptr (Gr_mtl_textureinfo) -- ^ C argument @"const gr_mtl_textureinfo_t * mtlInfo"@
  -> IO (Ptr (Gr_backendrendertarget)) -- ^ C return type: @"gr_backendrendertarget_t *"@

-- | Function pointer to 'gr_backendrendertarget_new_metal'
foreign import ccall "&gr_backendrendertarget_new_metal" p'gr_backendrendertarget_new_metal ::
  FunPtr (CInt -> CInt -> Ptr (Gr_mtl_textureinfo) -> IO (Ptr (Gr_backendrendertarget)))

{- | C function signature:

@
gr_backendrendertarget_t *gr_backendrendertarget_new_direct3d(int width, int height, const gr_d3d_textureresourceinfo_t *d3dInfo)
@
-}
foreign import ccall "gr_backendrendertarget_new_direct3d" gr_backendrendertarget_new_direct3d ::
  CInt -- ^ C argument @"int width"@
  -> CInt -- ^ C argument @"int height"@
  -> Ptr (Gr_d3d_textureresourceinfo) -- ^ C argument @"const gr_d3d_textureresourceinfo_t * d3dInfo"@
  -> IO (Ptr (Gr_backendrendertarget)) -- ^ C return type: @"gr_backendrendertarget_t *"@

-- | Function pointer to 'gr_backendrendertarget_new_direct3d'
foreign import ccall "&gr_backendrendertarget_new_direct3d" p'gr_backendrendertarget_new_direct3d ::
  FunPtr (CInt -> CInt -> Ptr (Gr_d3d_textureresourceinfo) -> IO (Ptr (Gr_backendrendertarget)))

{- | C function signature:

@
void gr_backendrendertarget_delete(gr_backendrendertarget_t *rendertarget)
@
-}
foreign import ccall "gr_backendrendertarget_delete" gr_backendrendertarget_delete ::
  Ptr (Gr_backendrendertarget) -- ^ C argument @"gr_backendrendertarget_t * rendertarget"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_backendrendertarget_delete'
foreign import ccall "&gr_backendrendertarget_delete" p'gr_backendrendertarget_delete ::
  FunPtr (Ptr (Gr_backendrendertarget) -> IO (()))

{- | C function signature:

@
_Bool gr_backendrendertarget_is_valid(const gr_backendrendertarget_t *rendertarget)
@
-}
foreign import ccall "gr_backendrendertarget_is_valid" gr_backendrendertarget_is_valid ::
  Ptr (Gr_backendrendertarget) -- ^ C argument @"const gr_backendrendertarget_t * rendertarget"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'gr_backendrendertarget_is_valid'
foreign import ccall "&gr_backendrendertarget_is_valid" p'gr_backendrendertarget_is_valid ::
  FunPtr (Ptr (Gr_backendrendertarget) -> IO (CBool))

{- | C function signature:

@
int gr_backendrendertarget_get_width(const gr_backendrendertarget_t *rendertarget)
@
-}
foreign import ccall "gr_backendrendertarget_get_width" gr_backendrendertarget_get_width ::
  Ptr (Gr_backendrendertarget) -- ^ C argument @"const gr_backendrendertarget_t * rendertarget"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'gr_backendrendertarget_get_width'
foreign import ccall "&gr_backendrendertarget_get_width" p'gr_backendrendertarget_get_width ::
  FunPtr (Ptr (Gr_backendrendertarget) -> IO (CInt))

{- | C function signature:

@
int gr_backendrendertarget_get_height(const gr_backendrendertarget_t *rendertarget)
@
-}
foreign import ccall "gr_backendrendertarget_get_height" gr_backendrendertarget_get_height ::
  Ptr (Gr_backendrendertarget) -- ^ C argument @"const gr_backendrendertarget_t * rendertarget"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'gr_backendrendertarget_get_height'
foreign import ccall "&gr_backendrendertarget_get_height" p'gr_backendrendertarget_get_height ::
  FunPtr (Ptr (Gr_backendrendertarget) -> IO (CInt))

{- | C function signature:

@
int gr_backendrendertarget_get_samples(const gr_backendrendertarget_t *rendertarget)
@
-}
foreign import ccall "gr_backendrendertarget_get_samples" gr_backendrendertarget_get_samples ::
  Ptr (Gr_backendrendertarget) -- ^ C argument @"const gr_backendrendertarget_t * rendertarget"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'gr_backendrendertarget_get_samples'
foreign import ccall "&gr_backendrendertarget_get_samples" p'gr_backendrendertarget_get_samples ::
  FunPtr (Ptr (Gr_backendrendertarget) -> IO (CInt))

{- | C function signature:

@
int gr_backendrendertarget_get_stencils(const gr_backendrendertarget_t *rendertarget)
@
-}
foreign import ccall "gr_backendrendertarget_get_stencils" gr_backendrendertarget_get_stencils ::
  Ptr (Gr_backendrendertarget) -- ^ C argument @"const gr_backendrendertarget_t * rendertarget"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'gr_backendrendertarget_get_stencils'
foreign import ccall "&gr_backendrendertarget_get_stencils" p'gr_backendrendertarget_get_stencils ::
  FunPtr (Ptr (Gr_backendrendertarget) -> IO (CInt))

{- | C function signature:

@
gr_backend_t gr_backendrendertarget_get_backend(const gr_backendrendertarget_t *rendertarget)
@
-}
foreign import ccall "gr_backendrendertarget_get_backend" gr_backendrendertarget_get_backend ::
  Ptr (Gr_backendrendertarget) -- ^ C argument @"const gr_backendrendertarget_t * rendertarget"@
  -> IO (Gr_backend) -- ^ C return type: @"gr_backend_t"@

-- | Function pointer to 'gr_backendrendertarget_get_backend'
foreign import ccall "&gr_backendrendertarget_get_backend" p'gr_backendrendertarget_get_backend ::
  FunPtr (Ptr (Gr_backendrendertarget) -> IO (Gr_backend))

{- | C function signature:

@
_Bool gr_backendrendertarget_get_gl_framebufferinfo(const gr_backendrendertarget_t *rendertarget, gr_gl_framebufferinfo_t *glInfo)
@
-}
foreign import ccall "gr_backendrendertarget_get_gl_framebufferinfo" gr_backendrendertarget_get_gl_framebufferinfo ::
  Ptr (Gr_backendrendertarget) -- ^ C argument @"const gr_backendrendertarget_t * rendertarget"@
  -> Ptr (Gr_gl_framebufferinfo) -- ^ C argument @"gr_gl_framebufferinfo_t * glInfo"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'gr_backendrendertarget_get_gl_framebufferinfo'
foreign import ccall "&gr_backendrendertarget_get_gl_framebufferinfo" p'gr_backendrendertarget_get_gl_framebufferinfo ::
  FunPtr (Ptr (Gr_backendrendertarget) -> Ptr (Gr_gl_framebufferinfo) -> IO (CBool))
